--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -3,7 +3,7 @@ body{
   align-items: center;     /* Alinha no centro vertical */
   height: 100%;           /* Faz o body ocupar toda a altura da tela */
   margin: 0;  
-  background-image: url("imagens/fundo.jpg");
+  background-image: url("../imagens/fundo.jpg");
   background-repeat: no-repeat;       /* Para não repetir a imagem */
   background-size: cover;             /* Faz a imagem cobrir todo o elemento */
   background-position: center center; /* Centraliza a imagem */
